Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vuyelwa Sewela - Personal Webpage</title>
+    <title>Vuyelwa Petunia Sewela - Personal Webpage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,11 +18,11 @@
             overflow: hidden;
         }
         header {
-            background: #D2B48C;
+            background: #6C8EBF;
             color: #fff;
             padding-top: 30px;
             min-height: 70px;
-            border-bottom: #8B4513 3px solid;
+            border-bottom: #4A6572 3px solid;
         }
         header a {
             color: #fff;
@@ -40,7 +40,7 @@
         }
         .showcase {
             min-height: 400px;
-            background: url('1672732830337.jpg') no-repeat center center/cover;
+            background: #6C8EBF;
             text-align: center;
             color: #fff;
         }
@@ -59,7 +59,7 @@
         .section h1 {
             text-align: center;
             margin-bottom: 20px;
-            color: #D2B48C;
+            color: #6C8EBF;
         }
         .box {
             width: 30%;
@@ -67,13 +67,10 @@
             text-align: center;
             padding: 10px;
         }
-        .box img {
-            width: 90px;
-        }
         footer {
             padding: 20px;
             text-align: center;
-            background: #8B4513;
+            background: #4A6572;
             color: #fff;
             margin-top: 20px;
         }
@@ -82,7 +79,7 @@
             width: 200px;
             height: 50px;
             margin: 20px auto;
-            background-color: #D2B48C;
+            background-color: #6C8EBF;
             color: #fff;
             text-align: center;
             line-height: 50px;
@@ -93,20 +90,13 @@
             text-align: center;
             margin-top: 20px;
         }
-        img.profile-picture {
-            display: block;
-            margin: 20px auto;
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-        }
     </style>
 </head>
 <body>
     <header>
         <div class="container">
             <div id="branding">
-                <h1>Vuyelwa Sewela</h1>
+                <h1>Vuyelwa Petunia Sewela</h1>
             </div>
             <nav>
                 <ul>
@@ -128,12 +118,11 @@
     <section id="about" class="section">
         <div class="container">
             <h1>About Me</h1>
-            <img src="1672732830337.jpg" alt="Vuyelwa Sewela" class="profile-picture">
-            <p>Hello there! I'm Vuyelwa, a technical dynamo with a passion for turning complexity into elegant solutions. I thrive on challenges, and my journey in the tech realm has been nothing short of an exciting adventure. With a tech and research-oriented persona, I bring a keen analytical eye and a hunger for innovation. My journey includes extensive experience in systems analysis, allowing me to dissect complexities and engineer streamlined solutions.</p>
+            <p>Hello there! I'm Vuyelwa Petunia Sewela, a technical dynamo with a passion for turning complexity into elegant solutions. I thrive on challenges, and my journey in the tech realm has been nothing short of an exciting adventure. With a tech and research-oriented persona, I bring a keen analytical eye and a hunger for innovation. My journey includes extensive experience in systems analysis, allowing me to dissect complexities and engineer streamlined solutions.</p>
             <p>As a certified Salesforce Administrator and Platform Developer I, my expertise extends to the heart of Salesforce ecosystems. The fusion of my technical prowess, enthusiasm, and organizational finesse defines my approach to every project.</p>
             <p>Venture into the world of data, and you'll find me at the helm. Experienced in Data Analytics, Database Administrations, and Data Processing, I don't just interpret data; I transform it into actionable insights, bringing value to every byte.</p>
             <p>A trailblazer certified in Copado, I've mastered the art of DevOps, orchestrating seamless processes that enhance efficiency and propel projects forward.</p>
-            <a class="resume-button" href="Vuyelwa Pertunia Sewela Resume.pdf" download>Download My Resume</a>
+            <a class="resume-button" href="Vuyelwa Petunia Sewela Resume.pdf" download>Download My Resume</a>
         </div>
     </section>
 
@@ -173,6 +162,12 @@
             <div class="box">
                 <h3>Salesforce DX</h3>
             </div>
+            <div class="box">
+                <h3>SOQL</h3>
+            </div>
+            <div class="box">
+                <h3>SOSL</h3>
+            </div>
         </div>
     </section>
 
@@ -189,7 +184,7 @@
     </section>
 
     <footer>
-        <p>Vuyelwa Sewela &copy; 2024</p>
+        <p>Vuyelwa Petunia Sewela &copy; 2024</p>
     </footer>
 </body>
 </html>
