--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                  With a tech-driven mindset and a research-oriented approach, I bring a keen analytical eye and an unwavering drive to grow and innovate in the ever-evolving tech landscape.
 
             </p>
-            <a class="resume-button" href="Vuyelwa_Pertunia_Sewela_Resume.pdf" download>Download My Resume</a>
+            <a class="resume-button" href="Vuyelwa Pertunia Sewela Resume.pdf" download>Download My Resume</a>
         </div>
     </section>
 
